@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.7 2015/11/03 23:33:29 agc Exp $
+$NetBSD: distinfo,v 1.8 2019/07/31 19:54:06 brook Exp $
 
-SHA1 (R/mapproj_1.2-2.tar.gz) = 953d2601c274ef6681b6e2e5d3c81a8984077fe3
-RMD160 (R/mapproj_1.2-2.tar.gz) = 4d50d09931d503dd77b7937fd5c1b22915ac522e
-SHA512 (R/mapproj_1.2-2.tar.gz) = 62659a9cc4a547d040744995553a8a71c8e5737eece4e3ba24e8a3f91a98a46af0941f7b16b5d0ed110f76d32025864bb673a2f289ea42c8135675e1e9d0c3b5
-Size (R/mapproj_1.2-2.tar.gz) = 25320 bytes
+SHA1 (R/mapproj_1.2.6.tar.gz) = ece25cbb1850f3011ba2f808cfef233481dbdde2
+RMD160 (R/mapproj_1.2.6.tar.gz) = 26a2bb6ced69264c109ff4178ee60558c111be09
+SHA512 (R/mapproj_1.2.6.tar.gz) = d89ee2e1b50e953597e299963e5fe3597a1af39f67105f224a35cd9938091ab0f2e65f5894d10aa001b4f481a4cc2b9eed3377ce0828ce927993d6692f6f2faa
+Size (R/mapproj_1.2.6.tar.gz) = 25700 bytes
