@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3185 2019/07/31 19:52:47 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3186 2019/07/31 19:54:05 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5142,3 +5142,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-lme4 to 1.1.21 [brook 2019-07-31]
 	Updated math/R-lmm to 1.2 [brook 2019-07-31]
 	Updated math/R-lmtest to 0.9.37 [brook 2019-07-31]
+	Updated math/R-mapproj to 1.2.6 [brook 2019-07-31]
